--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2    # Para acessar a câmera e a galeria de fotos
   geolocator: ^12.0.0 
-  
+  dio: ^5.8.0+1
+  shared_preferences: ^2.5.3
+  get_it: ^8.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
