--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   dio: ^5.8.0+1
   shared_preferences: ^2.5.3
   get_it: ^8.0.3
-
+  mime: ^1.0.5
+  http_parser: ^4.0.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -89,6 +91,16 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/SpoofTrial-Bold.otf
+          weight: 900
+        - asset: assets/fonts/SpoofTrial-Regular.otf
+          weight: 500
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
